fix(carousel): revert html overflow

--- a/components/carousel/src/Carousel.module.scss
+++ b/components/carousel/src/Carousel.module.scss
@@ -1,6 +1,5 @@
 @import "@bmi/styles";
 
-html,
 body {
   overflow-x: hidden;
 }
